--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VAR_lambda_auth_arn: ${{ secrets.LAMBDA_ARN }}
+  TF_VAR_lambda_auth_arn: ${{ secrets.LAMBDA_AUTH_ARN }}
 
 
 permissions:
