fix: add pr trigger on ci

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: CI/CD - Deploy Infraestructure
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
     paths:
       - "garage-management-infra/**"
   workflow_dispatch:
